--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
-.root{
-  padding: 0;
+#root{
+  padding: 0 !important;
 }
 
 a {
